Correct gap, and calender-view size?

--- a/rootine/src/components/App/Calender/Calender.css
+++ b/rootine/src/components/App/Calender/Calender.css
@@ -3,7 +3,7 @@
   border-radius: 4.5em;
   box-shadow: 0px 0px 5px gray;
   background-color: white;
-  margin-left: 0.01mm;
+  /* margin-left: 0.01mm; */
   width: 150vw;
-  height: 50vh;
+  height: 65vh;
 }
